# harbour-sailfin

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  harbour-sailfin.desktop  harbour-sailfin.pri  harbour-sailfin.pro
core/: CMakeLists.txt  GeneratedSources.cmake  JellyfinQt.qmltypes  README.md  core.pro  defines.pri  openapi.json  openapigenerator.d  qmldir
core/codegen/: enum_header.hbs  enum_implementation.hbs  loader_header.hbs  loader_implementation.hbs  loader_types_header.hbs  loader_types_header_getters_setters.hbs  loader_types_implementation.hbs  object_header.hbs  object_implementation.hbs
core/dbus/: org.mpris.MediaPlayer2.Player.xml
core/doc/: contributing.md  custom.css  guides.md  mainpage.md
core/doc/guide/: apimodel-loader.md  getting-started.md
core/doc/namespace/: dto.dox  viewmodel.dox
core/include/: credentialmanager.h  jellyfin.h  jellyfinapiclient.h  jellyfinapimodel.h  jellyfinitem.h  jellyfinplaybackmanager.h  jellyfinwebsocket.h  jsonhelper.h
core/include/JellyfinQt/: apiclient.h  apimodel.h  credentialmanager.h  deviceprofile.h  eventbus.h  jellyfin.h  jellyfinapiclient.h  jellyfinapimodel.h  jellyfinitem.h  jellyfinplaybackmanager.h  jellyfinwebsocket.h  jsonhelper.h  playbackmanager.h  qobjectsettingswrapper.h  remotedata.h  serverdiscoverymodel.h  websocket.h
core/qrc/: 3rdparty.xml
core/src/: apiclient.cpp  apimodel.cpp  credentialmanager.cpp  deviceprofile.cpp  eventbus.cpp  jellyfin.cpp  jellyfinapiclient.cpp  jellyfinapimodel.cpp  jellyfindeviceprofile.cpp  jellyfinitem.cpp  jellyfinplaybackmanager.cpp  jellyfinwebsocket.cpp  jsonhelper.cpp  playbackmanager.cpp  qobjectsettingswrapper.cpp  remotedata.cpp  serverdiscoverymodel.cpp  websocket.cpp
core/src/DTO/: accessschedule.cpp  activitylogentry.cpp  activitylogentryqueryresult.cpp  addvirtualfolderdto.cpp  albuminfo.cpp  albuminforemotesearchquery.cpp  allthememediaresult.cpp  architecture.cpp  artistinfo.cpp  artistinforemotesearchquery.cpp  authenticateuserbyname.cpp  authenticationinfo.cpp  authenticationinfoqueryresult.cpp  authenticationresult.cpp  baseitem.cpp  baseitemdto.cpp  baseitemdtoqueryresult.cpp  baseitemperson.cpp  bookinfo.cpp  bookinforemotesearchquery.cpp  boxsetinfo.cpp  boxsetinforemotesearchquery.cpp  brandingoptions.cpp  bufferrequestdto.cpp  channelfeatures.cpp  channelitemsortfield.cpp  channelmappingoptionsdto.cpp  channelmediacontenttype.cpp  channelmediatype.cpp  channeltype.cpp  chapterinfo.cpp  clientcapabilities.cpp  clientcapabilitiesdto.cpp  codecprofile.cpp  codectype.cpp  collectioncreationresult.cpp  configurationpageinfo.cpp  configurationpagetype.cpp  containerprofile.cpp  controlresponse.cpp  (+229 more)
core/src/dto/: accessschedule.cpp  activitylogentry.cpp  activitylogentrymessage.cpp  activitylogentryqueryresult.cpp  activitylogentrystartmessage.cpp  activitylogentrystopmessage.cpp  addvirtualfolderdto.cpp  albuminfo.cpp  albuminforemotesearchquery.cpp  allthememediaresult.cpp  architecture.cpp  artistinfo.cpp  artistinforemotesearchquery.cpp  audiospatialformat.cpp  authenticateuserbyname.cpp  authenticationinfo.cpp  authenticationinfoqueryresult.cpp  authenticationresult.cpp  baseitem.cpp  baseitemdto.cpp  baseitemdtoqueryresult.cpp  baseitemkind.cpp  baseitemperson.cpp  basepluginconfiguration.cpp  bookinfo.cpp  bookinforemotesearchquery.cpp  boxsetinfo.cpp  boxsetinforemotesearchquery.cpp  brandingoptions.cpp  bufferrequestdto.cpp  castreceiverapplication.cpp  channelfeatures.cpp  channelitemsortfield.cpp  channelmappingoptionsdto.cpp  channelmediacontenttype.cpp  channelmediatype.cpp  channeltype.cpp  chapterinfo.cpp  clientcapabilities.cpp  clientcapabilitiesdto.cpp  (+329 more)
core/src/loader/: activateparams.cpp  addlistingproviderparams.cpp  addmediapathparams.cpp  addtocollectionparams.cpp  addtoplaylistparams.cpp  addtunerhostparams.cpp  addusertosessionparams.cpp  addvirtualfolderparams.cpp  applysearchcriteriaparams.cpp  authenticateuserbynameparams.cpp  authenticateuserparams.cpp  authenticatewithquickconnectparams.cpp  authorizeparams.cpp  availableparams.cpp  cancelpackageinstallationparams.cpp  cancelseriestimerparams.cpp  canceltimerparams.cpp  closelivestreamparams.cpp  completewizardparams.cpp  connectparams.cpp  createadminnotificationparams.cpp  createcollectionparams.cpp  createkeyparams.cpp  createplaylistparams.cpp  createprofileparams.cpp  createseriestimerparams.cpp  createtimerparams.cpp  createuserbynameparams.cpp  deauthorizeparams.cpp  deletealternatesourcesparams.cpp  deletedeviceparams.cpp  deleteitemimagebyindexparams.cpp  deleteitemimageparams.cpp  deleteitemparams.cpp  deleteitemsparams.cpp  deletelistingproviderparams.cpp  deleteprofileparams.cpp  deleterecordingparams.cpp  deletesubtitleparams.cpp  deletetunerhostparams.cpp  (+369 more)
core/src/model/: controllablesession.cpp  deviceprofile.cpp  item.cpp  playbackmanager.cpp  playbackreporter.cpp  player.cpp  playlist.cpp  remotejellyfinplayback.cpp  shuffle.cpp  user.cpp
core/src/support/: jsonconv.cpp  loader.cpp  parseexception.cpp
core/src/viewmodel/: item.cpp  itemmodel.cpp  loader.cpp  mediastream.cpp  modelstatus.cpp  platformmediacontrol_freedesktop.cpp  platformmediacontrol_stub.cpp  playbackmanager.cpp  playlist.cpp  remotedevice.cpp  settings.cpp  user.cpp  userdata.cpp  usermodel.cpp
qtquick/: CMakeLists.txt  SailfinStyle.qml  qml.qrc  qmldir  qtquickcontrols2.conf  test.rcc
qtquick/SailfinStyle/: Page.qml  ToolBar.qml  qmldir
qtquick/qml/: ApiClient.qml  main.qml  qmldir
qtquick/qml/components/: Background.qml  BusyDialog.qml  Notification.qml  NotificationList.qml
qtquick/qml/pages/: DetailPage.qml  MainPage.qml
qtquick/src/: main.cpp
sailfish/: CMakeLists.txt  harbour-sailfin.desktop  sailfish.pro
sailfish/qml/: 3rdparty.xml  ApiClient.qml  Constants.qml  Utils.js  harbour-sailfin.qml  harbour-sailfin.qml.autosave  qmldir
sailfish/qml/components/: ContributorsSection.qml  JItem.qml  (+14 more)
sailfish/src/: harbour-sailfin.cpp
sailfish/translations/: harbour-sailfin-de.ts  harbour-sailfin-ru.ts  harbour-sailfin.ts
(+1748 files in other folders)
